# serializer version: 1
# name: TestBlower.test_from_dict_disabled
  Blower(
    is_enabled=False,
    is_on=False,
  )
# ---
# name: TestBlower.test_from_dict_enabled_on
  Blower(
    is_enabled=True,
    is_on=True,
  )
# ---
# name: TestCleanCycle.test_from_dict
  CleanCycle(
    clean_timer_enabled=False,
    is_enabled=True,
    start_hour=0,
    start_minute=0,
    vanishing_act=False,
  )
# ---
# name: TestConnectionStatus.test_from_dict_connected
  ConnectionStatus(
    spa_connected=True,
  )
# ---
# name: TestDiagnostics.test_from_dict
  Diagnostics(
    circulation_pump_flow_status='0',
    heater_error='0',
    heater_power='60',
    heater_volts=0.0,
    jet1_jet2_blower_power='14',
    jet3_power='30',
    jet3_volts=112.0,
    l1_n_volts=0.0,
    l2_n_volts=120.0,
    limit_thermistor_status='0',
    power_frequency='0',
    pressure_switch_status='1',
    regulation_thermistor_temp_status='0',
    small_loads_power='0',
    spa_failure_state=<SpaFailureState.OK: 'Spa_Ok'>,
  )
# ---
# name: TestEnergySaving.test_list_from_dict
  list([
    EnergySaving(
      duration=0,
      mode=0,
      schedule_id=1,
      start_hour=0,
      start_minute=0,
    ),
    EnergySaving(
      duration=0,
      mode=0,
      schedule_id=2,
      start_hour=0,
      start_minute=0,
    ),
  ])
# ---
# name: TestFreshWaterIQ.test_from_fwiq_endpoint
  FreshWaterIQ(
    chlorine=-1.0,
    conductivity=-1,
    installed=False,
    orp=-1,
    ph=-1.0,
    sensor_life_percentage=-1.0,
  )
# ---
# name: TestFreshWaterIQ.test_from_status_dict
  FreshWaterIQ(
    chlorine=3.2,
    conductivity=1500,
    installed=True,
    orp=650,
    ph=7.5,
    sensor_life_percentage=85.0,
  )
# ---
# name: TestHeater.test_from_dict
  Heater(
    current_temperature=100.0,
    heater_current=7.5,
    heater_lock=False,
    heater_on_seconds=52046,
    heating_mode=<HeatingMode.HEAT_WITH_BOOST: 'heatWithBoost'>,
    heatpump_installed=False,
    is_on=True,
    set_temperature=100.0,
    temperature_unit=<TemperatureUnit.FAHRENHEIT: 'DegF'>,
  )
# ---
# name: TestJet.test_jet3_concurrent_and_current
  Jet(
    concurrent_mode=True,
    current=3.6,
    is_enabled=True,
    jet_id=3,
    on_seconds=2,
    speed=<JetSpeed.HIGH_SPEED: 'highSpeed'>,
    speed_type=<JetSpeedType.SINGLE_SPEED: 'singleSpeed'>,
  )
# ---
# name: TestJet.test_list_from_dict
  list([
    Jet(
      concurrent_mode=False,
      current=0.0,
      is_enabled=True,
      jet_id=1,
      on_seconds=1061668,
      speed=<JetSpeed.HIGH_SPEED: 'highSpeed'>,
      speed_type=<JetSpeedType.DUAL_SPEED: 'dualSpeed'>,
    ),
    Jet(
      concurrent_mode=False,
      current=0.0,
      is_enabled=True,
      jet_id=2,
      on_seconds=0,
      speed=<JetSpeed.OFF: 'off'>,
      speed_type=<JetSpeedType.SINGLE_SPEED: 'singleSpeed'>,
    ),
    Jet(
      concurrent_mode=False,
      current=0.0,
      is_enabled=False,
      jet_id=3,
      on_seconds=0,
      speed=<JetSpeed.OFF: 'off'>,
      speed_type=<JetSpeedType.UNKNOWN: 'unknown'>,
    ),
  ])
# ---
# name: TestLightZone.test_custom_rgb_from_payload
  LightZone(
    c_blue=255,
    c_green=255,
    c_red=0,
    color=<LightColor.CUSTOM: 'CUSTOM'>,
    intensity=5,
    is_enabled=True,
    is_on=True,
    light_wheel=<LightWheelMode.OFF: 'off'>,
    loop_speed=0,
    rgb_state='active',
    zone_id=1,
  )
# ---
# name: TestLightZone.test_list_from_dict
  list([
    LightZone(
      c_blue=0,
      c_green=0,
      c_red=0,
      color=<LightColor.BLUE: 'BLUE'>,
      intensity=5,
      is_enabled=True,
      is_on=True,
      light_wheel=<LightWheelMode.OFF: 'off'>,
      loop_speed=0,
      rgb_state='inactive',
      zone_id=1,
    ),
    LightZone(
      c_blue=0,
      c_green=0,
      c_red=0,
      color=<LightColor.BLUE: 'BLUE'>,
      intensity=5,
      is_enabled=False,
      is_on=True,
      light_wheel=<LightWheelMode.OFF: 'off'>,
      loop_speed=0,
      rgb_state='inactive',
      zone_id=2,
    ),
    LightZone(
      c_blue=0,
      c_green=0,
      c_red=0,
      color=<LightColor.BLUE: 'BLUE'>,
      intensity=5,
      is_enabled=False,
      is_on=True,
      light_wheel=<LightWheelMode.OFF: 'off'>,
      loop_speed=0,
      rgb_state='inactive',
      zone_id=3,
    ),
    LightZone(
      c_blue=0,
      c_green=0,
      c_red=0,
      color=<LightColor.BLUE: 'BLUE'>,
      intensity=5,
      is_enabled=False,
      is_on=True,
      light_wheel=<LightWheelMode.OFF: 'off'>,
      loop_speed=0,
      rgb_state='inactive',
      zone_id=4,
    ),
  ])
# ---
# name: TestLogoLight.test_from_dict
  LogoLight(
    brightness=<BrightnessLevel.LEVEL_2: 'brightness_level_2'>,
  )
# ---
# name: TestSpa.test_full_status_parsing
  Spa(
    blower=Blower(
      is_enabled=False,
      is_on=False,
    ),
    clean_cycle=CleanCycle(
      clean_timer_enabled=False,
      is_enabled=True,
      start_hour=0,
      start_minute=0,
      vanishing_act=False,
    ),
    connection_status=ConnectionStatus(
      spa_connected=False,
    ),
    diagnostics=Diagnostics(
      circulation_pump_flow_status='0',
      heater_error='0',
      heater_power='0',
      heater_volts=0.0,
      jet1_jet2_blower_power='0',
      jet3_power='0',
      jet3_volts=0.0,
      l1_n_volts=0.0,
      l2_n_volts=0.0,
      limit_thermistor_status='0',
      power_frequency='0',
      pressure_switch_status='0',
      regulation_thermistor_temp_status='0',
      small_loads_power='0',
      spa_failure_state=<SpaFailureState.UNKNOWN: 'unknown'>,
    ),
    energy_savings=list([
      EnergySaving(
        duration=0,
        mode=0,
        schedule_id=1,
        start_hour=0,
        start_minute=0,
      ),
      EnergySaving(
        duration=0,
        mode=0,
        schedule_id=2,
        start_hour=0,
        start_minute=0,
      ),
    ]),
    freshwater_iq=FreshWaterIQ(
      chlorine=3.2,
      conductivity=1500,
      installed=True,
      orp=650,
      ph=7.5,
      sensor_life_percentage=85.0,
    ),
    heater=Heater(
      current_temperature=100.0,
      heater_current=7.5,
      heater_lock=False,
      heater_on_seconds=52046,
      heating_mode=<HeatingMode.HEAT_WITH_BOOST: 'heatWithBoost'>,
      heatpump_installed=False,
      is_on=True,
      set_temperature=100.0,
      temperature_unit=<TemperatureUnit.FAHRENHEIT: 'DegF'>,
    ),
    info=SpaInfo(
      brand=<SpaBrand.UNKNOWN: 'Unknown'>,
      brand_id='',
      brand_name='Unknown',
      collection='Unknown',
      collection_id='',
      hostname='',
      model_id='',
      model_name='Unknown',
      root_topic='',
      sna_ready=False,
      volume=0,
    ),
    jets=list([
      Jet(
        concurrent_mode=False,
        current=0.0,
        is_enabled=True,
        jet_id=1,
        on_seconds=1061668,
        speed=<JetSpeed.HIGH_SPEED: 'highSpeed'>,
        speed_type=<JetSpeedType.DUAL_SPEED: 'dualSpeed'>,
      ),
      Jet(
        concurrent_mode=False,
        current=0.0,
        is_enabled=True,
        jet_id=2,
        on_seconds=0,
        speed=<JetSpeed.OFF: 'off'>,
        speed_type=<JetSpeedType.SINGLE_SPEED: 'singleSpeed'>,
      ),
      Jet(
        concurrent_mode=False,
        current=0.0,
        is_enabled=False,
        jet_id=3,
        on_seconds=0,
        speed=<JetSpeed.OFF: 'off'>,
        speed_type=<JetSpeedType.UNKNOWN: 'unknown'>,
      ),
    ]),
    light_zones=list([
      LightZone(
        c_blue=0,
        c_green=0,
        c_red=0,
        color=<LightColor.BLUE: 'BLUE'>,
        intensity=5,
        is_enabled=True,
        is_on=True,
        light_wheel=<LightWheelMode.OFF: 'off'>,
        loop_speed=0,
        rgb_state='inactive',
        zone_id=1,
      ),
      LightZone(
        c_blue=0,
        c_green=0,
        c_red=0,
        color=<LightColor.BLUE: 'BLUE'>,
        intensity=5,
        is_enabled=False,
        is_on=True,
        light_wheel=<LightWheelMode.OFF: 'off'>,
        loop_speed=0,
        rgb_state='inactive',
        zone_id=2,
      ),
      LightZone(
        c_blue=0,
        c_green=0,
        c_red=0,
        color=<LightColor.BLUE: 'BLUE'>,
        intensity=5,
        is_enabled=False,
        is_on=True,
        light_wheel=<LightWheelMode.OFF: 'off'>,
        loop_speed=0,
        rgb_state='inactive',
        zone_id=3,
      ),
      LightZone(
        c_blue=0,
        c_green=0,
        c_red=0,
        color=<LightColor.BLUE: 'BLUE'>,
        intensity=5,
        is_enabled=False,
        is_on=True,
        light_wheel=<LightWheelMode.OFF: 'off'>,
        loop_speed=0,
        rgb_state='inactive',
        zone_id=4,
      ),
    ]),
    logo_light=LogoLight(
      brightness=<BrightnessLevel.LEVEL_2: 'brightness_level_2'>,
    ),
    spa_lock=SpaLock(
      is_locked=False,
    ),
    test_metrics=SpaTestData(
      heater_current=7.5,
      heater_test_status='off',
      jet1_jet2_blower_current=0.0,
      jet3_current=0.0,
      small_loads_current=0.0,
      temp_offset=0.0,
      vsense_cal=0.0,
    ),
    versions=Versions(
      amp='',
      btxr='',
      control_box='EG25.2100K0',
      control_panel='HT25.1102F0',
      cool_zone='',
      dosing='',
      fwiq='',
      fwss='105',
      logolight='',
      wifi_dongle='',
    ),
    water_care=WaterCare(
      ace_mode='normal',
      boost_active=False,
      cartridge_installed=True,
      level=3,
      one_twenty_day_timer=0,
      power_a=False,
      power_b=False,
      salt_value=0,
      system_enabled=True,
      ten_day_timer=0,
    ),
  )
# ---
# name: TestSpaInfo.test_from_dict
  SpaInfo(
    brand=<SpaBrand.HOTSPRING: 'HotSpring'>,
    brand_id='0',
    brand_name='HotSpring',
    collection='Limelight',
    collection_id='1',
    hostname='ConnectedSpa_112233',
    model_id='4',
    model_name='Limelight Beam Canada',
    root_topic='mySpaAABBCC112233',
    sna_ready=True,
    volume=335,
  )
# ---
# name: TestSpaLock.test_from_dict_unlocked
  SpaLock(
    is_locked=False,
  )
# ---
# name: TestSpaTestData.test_from_dict
  SpaTestData(
    heater_current=7.5,
    heater_test_status='off',
    jet1_jet2_blower_current=0.0,
    jet3_current=0.0,
    small_loads_current=0.0,
    temp_offset=0.0,
    vsense_cal=0.0,
  )
# ---
# name: TestVersions.test_from_dict
  Versions(
    amp='',
    btxr='',
    control_box='EG25.2100K0',
    control_panel='HT25.1102F0',
    cool_zone='',
    dosing='',
    fwiq='',
    fwss='105',
    logolight='',
    wifi_dongle='',
  )
# ---
# name: TestWaterCare.test_from_dict
  WaterCare(
    ace_mode='normal',
    boost_active=False,
    cartridge_installed=True,
    level=3,
    one_twenty_day_timer=0,
    power_a=False,
    power_b=False,
    salt_value=0,
    system_enabled=True,
    ten_day_timer=0,
  )
# ---
